begin fixing gallery cards gaps

--- a/styles/helpers/_media.scss
+++ b/styles/helpers/_media.scss
@@ -113,6 +113,7 @@
   }
 
   .tabs {
+    max-width: 550px;
     margin: 0px 30px 50px;
     flex-wrap: wrap;
     p {
@@ -187,15 +188,10 @@
   }
 
   .tabs {
-    margin: 0px 30px;
-    flex-wrap: wrap;
+    margin: 0px 30px 20px;
     p {
-      font-size: 13px;
-      font-weight: 600;
-      &:nth-child(1) {
-        color: #d3a265;
-        font-weight: bold;
-      }
+      font-size: 16px;
+      font-weight: 500;
     }
   }
 
@@ -211,9 +207,7 @@
   .gallery > div {
     max-width: 270px;
     height: 320px;
-    &:nth-child(1) {
-      margin-top: 20px !important;
-    }
+    margin-top: 0px;
     &:nth-child(4) {
       display: block;
     }
@@ -307,6 +301,19 @@
   .our-services-section {
     margin: 0px 135px;
   }
+
+  .tabs {
+    margin: 0px 135px 20px;
+  }
+
+  .gallery {
+    // padding: 0px 135px !important;
+    column-gap: 20px;
+    row-gap: 20px;
+    a {
+      display: none;
+    }
+  }
 }
 
 @media (min-width: 1200px) {
@@ -345,9 +352,6 @@
   .gallery > div {
     max-width: 270px;
     height: 320px;
-    &:nth-child(1) {
-      margin-top: 20px !important;
-    }
     &:nth-last-child(-n + 3) {
       display: block;
     }
